--- a/UpWork_Projects/residential-reits/bsrreit/emailTest.ipynb
+++ b/UpWork_Projects/residential-reits/bsrreit/emailTest.ipynb
@@ -18,10 +18,7 @@
    "outputs": [],
    "source": [
     "#EMAIL_USER = os.environ.get('EMAIL_USER')\n",
-    "#EMAIL_PASS = os.environ.get('EMAIL_PASS')\n",
-    "\n",
-    "EMAIL_USER = \"scoutthebot@gmail.com\"\n",
-    "EMAIL_PASS = \"uqnhyvgqllldcyqa\""
+    "#EMAIL_PASS = os.environ.get('EMAIL_PASS')\n"
    ]
   },
   {
